--- a/coins.html
+++ b/coins.html
@@ -31,8 +31,10 @@
 </head>
 <body>
 
-<div class="theme-layout">
-
+        <div class="theme-layout">
+                <div id="codefund"><!-- fallback content --></div>
+                <script src="https://codefund.app/properties/262/funder.js" async="async"></script>
+        
 	<div class="responsive-header">
 		<div class="logo"><a href="/" title=""><img height="52px" src="/images/logo.png" alt="" /></a></div>
 		<span class="open-responsive-btn"><i class="la la-bars"></i><i class="la la-close"></i></span>
