Main image is now webp

--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
 				<div class="col-md-12">
 					<div class="main-featured-sec">
 						<ul class="featured-bg-slide">
-							<li><img src="images/application-business-businessman-905869.jpg" alt="" /></li>
+							<li>
+									<picture>
+											<source srcset="images/application-business-businessman-905869.webp" type="image/webp">
+											<source srcset="images/application-business-businessman-905869.jpg" type="image/jpeg"> 
+												<img src="images/application-business-businessman-905869.jpg" alt="Smartphone in hand" />
+										  </picture>
+								</li>
 						</ul>
 						<div class="mian-featured-area">
 							<div class="main-featured-text">
