--- a/index.html
+++ b/index.html
@@ -236,6 +236,12 @@
 		<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="" aria-expanded="false" aria-controls=""></button>
 </template>
 
+<template id="mainLabelTemplate">
+	<div class="mainLabel">
+
+	</div>
+</template>
+
 <template id="tagInFilterTemplate-checkbox">
 		<div class="col-md-12">
 				<p>
@@ -254,7 +260,8 @@
 </template>
 
 <template id="collapseDivTemplate">
-	<div class="collapse"></div>
+	<div class="collapse">
+	</div>
 </template>
 
 <script type="text/javascript" src="/js/modernizr.js"></script><!-- Modernizer -->
