--- a/apps/status/index.html
+++ b/apps/status/index.html
@@ -12,11 +12,11 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Wallets Review - Your guide to mobile crypto wallets">
+<meta name="description" content="Wallets Review - Status crypto wallet review">
 <meta name="keywords" content="cryptocurrency, wallet, review, ethereum, mobile, finance">
 <meta name="author" content="https://twitter.com/bitfalls">
 
-<title>Wallets Review - your guide to mobile crypto wallets</title>
+<title>Wallets Review - Status Crypto Wallet Review</title>
 
 <!-- Styles -->
 <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" /><!-- Bootstrap -->
