updated jquery to version 3.4.0 and fixed some broken functions

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 	</template>
 
 	<script type="text/javascript" src="/js/modernizr.js"></script><!-- Modernizer -->
-	<script type="text/javascript" src="/js/jquery-2.1.1.js"></script><!-- Jquery -->
+	<script type="text/javascript" src="/js/jquery-3.4.0.min.js"></script><!-- Jquery -->
 	<script type="text/javascript" src="/js/script.js"></script><!-- Script -->
 	<script type="text/javascript" src="/js/bootstrap.min.js"></script><!-- Bootstrap -->
 	<script type="text/javascript" src="/js/scrolltopcontrol.js"></script><!-- ScrollTopControl -->
