Accessibility - Links do not have a discernible name.

--- a/apps/coinbase-wallet/index.html
+++ b/apps/coinbase-wallet/index.html
@@ -40,14 +40,14 @@
 		<script src="https://codefund.app/properties/262/funder.js" async=	"async"></script>
 
 		<div class="responsive-header">
-			<div class="logo"><a href="/" title=""><img height="52px" src="/images/logo.png" alt="" /></a></div>
+			<div class="logo"><a href="/" title="Wallets"><img height="52px" src="/images/logo.png" alt="Wallets logo" /></a></div>
 			<span class="open-responsive-btn"><i class="la la-bars"></i><i class="la la-close"></i></span>
 
 			
 		</div>
 
 		<header class="on-top dark" style="height: 97px">
-			<div class="logo"><a href="/" title=""><img height="52px" src="/images/logo.png" alt="" /></a></div>
+			<div class="logo"><a href="/" title="Wallets"><img height="52px" src="/images/logo.png" alt="Wallets logo" /></a></div>
 			<div class="menu-sec">
 
 				<nav class="header-menu">
